# AdvComparch

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  ParserTest.c  README.md  cmake_install.cmake  input.json
HW1/: CMakeLists.txt  CommitmentIsScary  Dockerfile  FrenchDispatch  Makefile  NameYourIssue  OoO470.c  OoO470.h  Readme.md  Simulate  build.sh  clean.sh  compare.py  comparetest.ipynb  maybe.json  reallyComparing.py  run.sh  runall.sh  testall.sh  visualize.html
HW1/HandMadeTests/: CommitmentIsScary.c  FrenchDispatch.c  FullyFunk.c  KingOfPop.c  NameYourIssue.c  OhMyDIR.c  Simulate.c
HW1/given_tests/01/: output.json  user_output.json
HW1/given_tests/02/: input.json  output.json  user_output.json
HW1/given_tests/03/: input.json  output.json  user_output.json
HW1/given_tests/04/: input.json  output.json  user_output.json
HW1/given_tests/05/: input.json  output.json  user_output.json
HW1/given_tests/06/: input.json  output.json  user_output.json
HW1/given_tests/07/: input.json  output.json  user_output.json
HW1/given_tests/08/: input.json  output.json  user_output.json
HW1/given_tests/09/: input.json  output.json  user_output.json
HW1/lib/: OoO470.h
HW1/src/: OoO470.c
HW1/tests/: CommitmentIsScary.c  FrenchDispatch.c  KingOfPop.c  NameYourIssue.c  OhMyDIR.c  Simulate.c
HW2/: CMakeLists.txt  Dockerfile  Makefile  Readme.md  VLIW470.c  build.sh  clean.sh  main.c  manual.sh  run.sh  runall.sh  utils.c
HW2/lib/: VLIW470.h  utils.c  utils.h
HW2/src/: VLIW470.c  main.c  utils.c
